  undefined properties. Patch by Joel Arvidsson.
- Added support for several definition managers through
  ezcPersistentMultiManager.
- Added the method ezcPersistentFindIterator::flush method that flushes the
  rest of the resultset from an iterator. This method must be called if you
  decide not to loop over the complete resultset of an iterator.


1.1 - Monday 12 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed small CS issues.


1.1rc1 - Monday 29 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request 8248: ezcPersistentSession should throw more
  descriptive exceptions.


1.1beta1 - Tuesday 09 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #7884: ezcPersistentSession sometimes triggers PDO "General error:
  2014" exceptions.
- Fixed #8042: PersistentObject requires use of database ID counter.

  *Note:* The change involves a slight BC incompatible change.
  ezcPersistentIdentifierGenerator is no longer an interface but an abstract
  class. Implementors must change 'implements' to 'extends' to reflect this.

- Added ezcPersistentManualGenerator which can be used to set the ID's of new
  object manually.


1.0.1 - Monday 20 February 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #7845: Find fetches all columns and not just the required columns.


1.0 - Monday 30 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed faulty numeric id check in ezcPersistentSession::loadIntoObject().


1.0rc1 - Monday 16 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added new methods to ezcPersistentSession:

  * removeFromQuery()
  * updateFromQuery()
  * findIterator which returns a ezcResultIterator

- Added support for table and column aliases.