@@ -19,6 +19,8 @@
 - Added the method ezcPersistentFindIterator::flush method that flushes the
   rest of the resultset from an iterator. This method must be called if you
   decide not to loop over the complete resultset of an iterator.
+- Constructor parameters $key and $incrementKey to ezcPersistentObjectDefinition
+  are now deprecated.
 
 
 1.1 - Monday 12 June 2006
